--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<java.version>1.8</java.version>
 		<commons-io.version>2.4</commons-io.version>
 		<swagger.version>2.6.1</swagger.version>
+		<spring.security.oauth.version>2.1.1.RELEASE</spring.security.oauth.version>
 	</properties>
 
 	<dependencies>
@@ -29,11 +30,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>5.1.1.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
+			<version>1.0.9.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
+			<version>${spring.security.oauth.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -44,8 +52,9 @@
 			<artifactId>flyway-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
