--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
   profiles: test
   datasource:
     driver-class-name: ${DB_DRIVER_CLASS:org.h2.Driver}
-    url: ${DB_URL:jdbc:h2:mem:acls;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;INIT=RUNSCRIPT FROM 'classpath:/h2/migration/init_tests.sql'}
+    url: ${DB_URL:jdbc:h2:mem:acls;MODE=mysql;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;INIT=RUNSCRIPT FROM 'classpath:/h2/migration/init_tests.sql'}
     username: ${DB_USERNAME:sa}
     password: ${DB_PASSWORD:}
 flyway:
